--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -20,6 +20,7 @@ spec:
         image: 28011997/springboot-app
         ports:
         - containerPort: 8080
+        imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
